engine/tests/fixtures/invalid/http-cache/actor-user.tg
actor actor_user {
  name "User"
  description "Fixture actor for invalid HTTP cache tests"

  status active
}
